Fix horizontal scroll behaviour
Horisontal scroll is disabled for all viweport widths.

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
 
 #intro-text {
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 6vw;
+  font-size: 12vw;
   color: #fff;
   padding-top:40vh
 }
@@ -76,7 +76,7 @@ section {
 
 footer {
   width: 100%;
-  height: 3em;
+  height: 6vh;
   background-color:#1c1c1c;
   position: fixed;
   left: 0;
@@ -101,13 +101,10 @@ footer p {
 }
 
 h2 {
-  /* font-family: 'Muli', sans-serif; */
   font-family: 'Josefin Sans', sans-serif;
   font-size: 3vw;
   color: white;
   margin: 0 0 1.5% 0;
-  /* color: #f4cc5a; */
-  /* margin:10% 0 1% 0; */
   }
 
 p {
@@ -128,6 +125,7 @@ a:link, a:visited {
   font-family: 'Muli', sans-serif;
   color:white;
   text-transform: uppercase;
+  font-size: 1.5vw;
 
 }
 
@@ -140,22 +138,23 @@ a:hover, a:active {
 .scroll-downs {
   position: absolute;
   bottom: 3vh;
-  left: 50vw;
+  left: 49vw;
   margin: auto;
   z-index: 0;
 }
 .mousey {
-  width: 2px;
+  width: 0.4vw;
   padding: 7px 10px;
-  height: 25px;
-  border: 2px solid #fff;
+  height: 5vh;
+  border: 0.15vw solid #fff;
   border-radius: 25px;
   opacity: 0.75;
   box-sizing: content-box;
 }
 .scroller {
-  width: 3px;
-  height: 10px;
+  width: 0.1vw;
+  height: 0.7vh;
+  padding-left:0.15vw;
   border-radius: 25%;
   background-color: #fff;
   animation-name: scroll;
@@ -182,14 +181,14 @@ a:hover, a:active {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 4em;
+  margin-bottom: 7vh;
 }
 
 .d #gelato {
   max-width:100%;
   height:auto;
   order:1;
-  margin-bottom: 4em;
+  margin-bottom: 7vh;
 }
 
 .f #truck-img{  
@@ -198,7 +197,7 @@ a:hover, a:active {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 4em;
+  margin-bottom: 7vh;
 }
 
 .h #solarcell{  
@@ -207,7 +206,7 @@ a:hover, a:active {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 4em;
+  margin-bottom: 7vh;
 }
 
 /* Hamburger menu */
@@ -241,7 +240,7 @@ a:hover, a:active {
 .button_container span {
   background: #FFF;
   border: none;
-  height: 5px;
+  height: 0.2vw; /*Tjocklek på streck*/
   width: 100%;
   position: absolute;
   top: 0;
@@ -350,6 +349,14 @@ a:hover, a:active {
 
 /* Grid system */
 @media only screen and (min-width: 960px) {
+  #intro-text {
+    font-size: 6vw;
+    padding-top:40vh
+  }
+  
+  p {
+  margin-bottom:5vh;
+  }
 
   .container {
     display: grid;
@@ -357,9 +364,9 @@ a:hover, a:active {
     grid-gap: 20px;
   }
 
-  .box {
-    margin:0 0 5em 0;
-  }
+  /* .box {
+    border: 1px solid red;
+  } */
 
   .b #korpen-img {
     max-width:70%;
@@ -367,6 +374,7 @@ a:hover, a:active {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin:0 0 5em 0;
   }
 
   .c {
@@ -377,6 +385,7 @@ a:hover, a:active {
     max-width:100%;
     height:auto;
     order:1;
+    margin:0 0 5em 0;
   }
   .e {
     order: 3;
@@ -391,6 +400,7 @@ a:hover, a:active {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin:0 0 5em 0;
   }
 
   .g {
